@@ -1,0 +1,25 @@
+onEvent('tags.items', event => {
+    event.add('createpunk:meals', [
+        "minecraft:rabbit_stew", "minecraft:mushroom_stew", "minecraft:beetroot_soup",
+        
+        "farmersdelight:pasta_with_mutton_chop", "farmersdelight:baked_cod_stew", "farmersdelight:roasted_mutton_chops", "farmersdelight:beef_stew", "farmersdelight:pasta_with_meatballs", "farmersdelight:fried_rice", 
+        "farmersdelight:vegetable_soup", "farmersdelight:vegetable_noodles", "farmersdelight:squid_ink_pasta", "farmersdelight:shepherds_pie", "farmersdelight:honey_glazed_ham", "farmersdelight:bacon_and_eggs", 
+        "farmersdelight:pumpkin_soup", "farmersdelight:steak_and_potatoes", "farmersdelight:fish_stew", "farmersdelight:roast_chicken", "farmersdelight:stuffed_pumpkin", "farmersdelight:chicken_soup", 
+        "farmersdelight:grilled_salmon", "farmersdelight:ratatouille", "farmersdelight:noodle_soup", "farmersdelight:cabbage_rolls", "farmersdelight:egg_sandwich", "farmersdelight:hamburger", "farmersdelight:bacon_sandwich", 
+        "farmersdelight:chicken_sandwich", "farmersdelight:mutton_wrap", "farmersdelight:fruit_salad", "farmersdelight:mixed_salad", "farmersdelight:dumplings", "farmersdelight:stuffed_potato", "farmersdelight:barbecue_stick", 
+        "farmersdelight:nether_salad", 
+        
+        "farmersrespite:blazing_chili", "farmersrespite:black_cod", "farmersrespite:tea_curry", 
+        
+        "corn_delight:corn_soup", "corn_delight:corn_dog", "corn_delight:classic_corn_dog", "corn_delight:taco", "corn_delight:creamed_corn", 
+        
+        "fruittrees:lemon_roast_chicken", "fruittrees:rice_with_fruits", "fruittrees:grapefruit_panna_cotta", "fruittrees:donauwelle", 
+        
+        "nethersdelight:strider_moss_stew", "nethersdelight:grilled_strider", "nethersdelight:plate_of_stuffed_hoglin_snout", "nethersdelight:plate_of_stuffed_hoglin_ham", "nethersdelight:plate_of_stuffed_hoglin_roast", 
+        "nethersdelight:nether_skewer", "nethersdelight:warped_moldy_meat", 
+        
+        "ecologics:tropical_stew", 
+        
+        "kubejs:grilled_corn", "kubejs:boiled_corn", "kubejs:cornbread_stuffing"
+    ]);
+});
