@@ -1,15 +1,46 @@
 onEvent('recipes', event => {
     event.remove({output: 'farmersdelight:wheat_dough'});
-
     event.replaceInput('create:dough', 'farmersdelight:wheat_dough');
     event.replaceOutput('create:dough', 'farmersdelight:wheat_dough');
-
     event.shapeless(
         'farmersdelight:wheat_dough',
         [
             'create:dough'
         ]
     );
+
+    event.replaceOutput('corn_delight:grilled_corn', 'kubejs:grilled_corn');
+    event.replaceOutput('corn_delight:boiled_corn', 'kubejs:boiled_corn');
+    event.replaceOutput('corn_delight:cornbread_stuffing', 'kubejs:cornbread_stuffing');
+
+    event.remove({output: 'minecraft:mushroom_stew'});
+    event.custom({
+        type: 'farmersdelight:cooking',
+        ingredients: [
+            Item.of('minecraft:brown_mushroom').toResultJson(),
+            Item.of('minecraft:brown_mushroom').toResultJson(),
+            Item.of('farmersdelight:onion').toResultJson(),
+            Item.of('#forge:milk').toResultJson()
+        ],
+        result: Item.of('minecraft:mushroom_stew').toResultJson(),
+        container: Item.of('minecraft:bowl').toResultJson(),
+        experience: 0.2,
+        cookingtime: 200
+    });
+
+    event.remove({output: 'minecraft:beetroot_soup'});
+    event.custom({
+        type: 'farmersdelight:cooking',
+        ingredients: [
+            Item.of('minecraft:beetroot').toResultJson(),
+            Item.of('minecraft:beetroot').toResultJson(),
+            Item.of('#forge:vegetables').toResultJson()
+        ],
+        result: Item.of('minecraft:mushroom_stew').toResultJson(),
+        container: Item.of('minecraft:bowl').toResultJson(),
+        experience: 0.2,
+        cookingtime: 200
+    });
 });
 
 onEvent('tags.items', event => {
